# shop-manager

./: .prettierignore  .prettierrc  README.md  bun.lockb  kysely.config.ts  package.json  vite.config.js
.github/workflows/: publish.yml
docs/: Техзадание.md
src/: app.html  app.scss
src-tauri/: Cargo.toml  tauri.conf.json
src/lib/: util.ts
src/lib/components/: ComboBox.svelte  Window.svelte
src/lib/components/datagrid/: DataGrid.svelte  DataGridHeader.svelte
src/lib/components/header/: Entry.svelte  Header.svelte
src/lib/components/inputs/: CurrencyInput.svelte  Input.svelte  NumberInput.svelte
src/lib/components/modals/notifications/: Toast.svelte  Toasts.svelte  index.ts
src/lib/components/modals/prompts/: Prompt.svelte  TextPrompt.svelte  index.ts
src/lib/data/: audit.ts  balance.ts  employee.ts  shipment.ts  shop.ts  supplier.ts
src/lib/db/: driver.ts  index.ts  migrate.ts  migration-provider.ts
src/lib/db/migrations/: 00001_init.ts
src/routes/: +layout.svelte  +layout.ts  +page.ts
src/routes/audits/: +page.svelte  AuditWindow.svelte
src/routes/balance/: +page.svelte  +page.ts
src/routes/balance/[shop]/[date]/: +page.svelte  +page.ts  AuditRow.svelte  Extended.svelte  Row.svelte
src/routes/employees/: +page.svelte
src/routes/shipments/: +page.svelte  ShipmentWindow.svelte
src/routes/shops/: +page.svelte
src/routes/suppliers/: +page.svelte  SupplierWindow.svelte
